Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "title(\"art vandelay\")"
+    "\"art vande\""
    ]
   },
   {
