--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "\"art vande\""
+    "\"art vandelay\".title()\n"
    ]
   },
   {
