Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,8 +165,8 @@
     }
    ],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'\n",
-    "\"art.title()\n"
+    "name=\"art vandelay\" # 'Art Vandelay'\n",
+    "name.title()\n"
    ]
   },
   {
