Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -80,14 +80,13 @@
        "'ART VANDELAY'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name = \"art vandelay\".upper/9 # \"ART VANDELAY\"\n",
-    "name.upper()"
+    "\"art vandelay\".upper() # \"ART VANDELAY\""
    ]
   },
   {
